platforms/gke/base/use-cases/inference-ref-arch/terraform/comfyui/templates/gateway/http-route-service.tftpl.yaml
# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: ${http_route_name}
  namespace: ${namespace}
spec:
  parentRefs:
    - kind: Gateway
      name: ${gateway_name}
  hostnames:
    - ${hostname}
  rules:
    - backendRefs:
        - name: ${service_name}
          port: ${service_port}
